--- a/bert_classification.ipynb
+++ b/bert_classification.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOVF5DIitVhZcBMi+8btnlC"
+      "authorship_tag": "ABX9TyOgfVM8pg/BAXf3/d3RF4pP",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -4745,8 +4746,18 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
       "source": [
-        "# Bert Tokenizer\n",
+        "<a href=\"https://colab.research.google.com/github/mansoorhamidzadeh/transformers/blob/main/bert_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Bert Model\n",
         "This model pushed to huggingface [link text](https://huggingface.co/mansoorhamidzadeh/bert_classification)\n",
         "\n",
         "\n"
